--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>JavaScript Control Flow and Functions Challenge</title>
 </head>
 <body>
-    <h1>JavaScript Control FLow and Functions Challenge</h1>
+    <h1>JavaScript Control Flow and Functions Challenge</h1>
     <script src="cc_4.js"></script>
 </body>
 </html>
